API Gateway is now back in usage.  Blazor UI will dynamically populate the routes on startup rather than them being hardcoded within ocelot.json.  Base config for Ocelot also moved from Ocelot.json to appsettings.json so that this can be configured within docker.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/App.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/App.razor
@@ -28,7 +28,14 @@
 
         UserAppCache.SetLanguageCode(await MyFoundationService.GetLanguageCode(TokenProvider.AccessToken));
 
+        await CheckGateway();
+
         //return base.OnInitializedAsync();
+    }
+
+    private async Task CheckGateway()
+    {
+        await MyFoundationService.CheckBaseGatewayConfig(TokenProvider.AccessToken);    
     }
 
     private Theme theme = new Theme
