--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Dashboard/Dashboard.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Dashboard/Dashboard.razor
@@ -34,11 +34,16 @@
 
     protected override async Task OnInitializedAsync()
     {
+        //await CheckGateway();
         await GetLanguageList();
         loadingPage = false;
         pageProgressBar.ChangeVisibility(loadingPage);
-        await CallGateway();
     }
+
+    //private async Task CheckGateway()
+    //{
+    //    await MyFoundationService.CheckBaseGatewayConfig(TokenProvider.AccessToken);    
+    //}
 
     private async Task GetLanguageList()
     {
@@ -50,17 +55,5 @@
         textCodes.Add(10807);
 
         langQueryList = await MyFoundationService.GetLanguageInfo(TokenProvider.AccessToken, UserAppCache.LanguageCode, textCodes.ToArray());
-    }
-
-    private async Task CallGateway()
-    {
-        var response = await MyFoundationService.MakeAPICallAsync(TokenProvider.AccessToken, HttpMethod.Get, APITypes.GATEWAY, $"administration/configuration");
-
-        var test = response.ContentAsString();
-
-        if (response.StatusCode == System.Net.HttpStatusCode.OK)
-        {
-            
-        }    
     }
 }
