--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -42,6 +42,7 @@
 @using PanacheSoftware.Core.Domain.API
 @using PanacheSoftware.Core.Domain.UI.DataTable
 @using PanacheSoftware.Core.Domain.UI
+@using PanacheSoftware.Core.Domain.Ocelot
 @using PanacheSoftware.UI.Core.Helpers
 @using Newtonsoft.Json
 @using System.Text
