Update Task screen so that it dynamically changes as custom field groups are added.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupEdit/CustomFieldGroupEdit.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupEdit/CustomFieldGroupEdit.razor
@@ -46,6 +46,12 @@
             customFieldGroupValuesModelList.CustomFieldGroupValuesModels.AddRange(mainTaskGroupList);
     }
 
+    public async void UpdateCustomFieldGroups()
+    {
+        await GetCustomFieldGroupModelList();
+        StateHasChanged();
+    }
+
     private async Task<List<CustomFieldGroupValuesModel>> GetCustomFieldGroupModels()
     {
         var fieldGroupValueModels = new List<CustomFieldGroupValuesModel>();
