--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemEdit.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemEdit.razor
@@ -79,7 +79,7 @@
                 </Validations>
                 <Row>
                     <Column>
-                        <CustomFieldGroupLink @ref="customFieldGroupLink" linkId="taskHead.Id" linkType="@LinkTypes.Task" />
+                        <CustomFieldGroupLink @ref="customFieldGroupLink" linkId="taskHead.Id" linkType="@LinkTypes.Task" CustomFieldGroupChange="@CustomFieldGroupsChanged" />
                     </Column>
                 </Row>
             </ModalBody>
@@ -115,6 +115,9 @@
 
     [Parameter]
     public EventCallback<TaskHead> TaskItemUpdated { get; set; }
+
+    [Parameter]
+    public EventCallback<Task> CustomFieldGroupChange { get; set; }
 
     [Parameter]
     public string ActionButtonTitle { get; set; }
@@ -293,6 +296,11 @@
         }
 
         return new Tuple<bool, string>(false, $"No task to save");
+    }
+
+    void CustomFieldGroupsChanged()
+    {
+        CustomFieldGroupChange.InvokeAsync(); 
     }
 
 }
