--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
@@ -184,6 +184,7 @@
         textCodes.Add(10224);
         textCodes.Add(10225);
         textCodes.Add(10229);
+        textCodes.Add(10230);
         textCodes.Add(10302);
         textCodes.Add(10306);
         textCodes.Add(10900);
